--- a/sunhomo-java/sunhomo-admin/src/main/resources/templates/enroll/activity/activity.html
+++ b/sunhomo-java/sunhomo-admin/src/main/resources/templates/enroll/activity/activity.html
@@ -72,10 +72,10 @@
         var options = {
             url: prefix + "/list",
             createUrl: prefix + "/add",
-            updateUrl: prefix + "/edit/{activityId}",
+            updateUrl: prefix + "/edit/{id}",
             removeUrl: prefix + "/remove",
-            modalName: "默认节点",
-            // pagination: false,
+            modalName: "活动",
+            pagination: true,
             uniqueId: "activityId",
             columns: [
                 {
@@ -115,7 +115,7 @@
                     title: '活动地点'
                 },
                 {
-                    field: 'filed',
+                    field: 'field',
                     title: '场地'
                 },
                 {
@@ -139,7 +139,7 @@
                     formatter: function (value, row, index) {
                         var actions = [];
                         actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.activityId + '\')"><i class="fa fa-edit"></i>编辑</a> ');
-                        actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.activityId + '\')"><i class="fa fa-remove"></i>删除</a> ');
+                        actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(' + row.activityId + ')"><i class="fa fa-remove"></i>删除</a> ');
                         return actions.join('');
                     }
                 }
