--- a/sunhomo-java/sunhomo-admin/src/main/resources/templates/enroll/activity/activity.html
+++ b/sunhomo-java/sunhomo-admin/src/main/resources/templates/enroll/activity/activity.html
@@ -76,6 +76,8 @@
             removeUrl: prefix + "/remove",
             modalName: "活动",
             pagination: true,
+            sortName: "activityId",
+            sortOrder: "desc",
             uniqueId: "activityId",
             columns: [
                 {
@@ -138,7 +140,7 @@
                     align: 'center',
                     formatter: function (value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.activityId + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(' + row.activityId + ')"><i class="fa fa-edit"></i>编辑</a> ');
                         actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(' + row.activityId + ')"><i class="fa fa-remove"></i>删除</a> ');
                         return actions.join('');
                     }
