--- a/sunhomo-java/sunhomo-admin/src/main/resources/templates/enroll/activity/add.html
+++ b/sunhomo-java/sunhomo-admin/src/main/resources/templates/enroll/activity/add.html
@@ -104,15 +104,6 @@
         </div>
     </form>
 </div>
-
-<div class="row">
-    <div class="col-sm-offset-5 col-sm-10">
-        <button type="button" class="btn btn-sm btn-primary" onclick="submitHandler()"><i class="fa fa-check"></i>保 存
-        </button>&nbsp;
-        <button type="button" class="btn btn-sm btn-danger" onclick="closeItem()"><i class="fa fa-reply-all"></i>关 闭
-        </button>
-    </div>
-</div>
 <th:block th:include="include :: footer"/>
 <script>
     var prefix = ctx + "enroll/activity";
@@ -126,7 +117,7 @@
         if ($.validate.form()) {
             var data = $("#form-activity-add").serializeArray();
             data.push({"name": "activityState", "value": 1});
-            $.operate.saveTab(prefix + "/add", data);
+            $.operate.save(prefix + "/add", data);
         }
     }
 
