添加小程序TAB\

--- a/sunhomo-miniProgram/pages/index/index.wxml
+++ b/sunhomo-miniProgram/pages/index/index.wxml
@@ -1,13 +1,17 @@
-<!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+	<view class="header">
+		<view class="title">报名活动</view>
+	</view>
+
+	<view class="menu-list">
+		<block wx:for="{{activities}}" wx:for-item="activity">
+			<view class="menu-item">
+				<view class="menu-item-main" id="{{index}}" bindtap="enroll">
+					<text class="menu-item-name">{{activity.name}}</text>
+					<image class="menu-item-arrow " src="/images/arrowright.png">
+					</image>
+				</view>
+			</view>
+		</block>
+	</view>
 </view>
