--- a/sunhomo-miniProgram/pages/index/index.wxss
+++ b/sunhomo-miniProgram/pages/index/index.wxss
@@ -1,21 +1,33 @@
-/**index.wxss**/
-.userinfo {
+.header {
+  padding: 80rpx;
+  line-height: 1;
+}
+.title {
+  font-size: 52rpx;
+}
+.menu-list {
   display: flex;
   flex-direction: column;
+  background-color: #fbf9fe;
+  margin-top: 10rpx;
+}
+.menu-item {
+  color: #000000;
+  display: flex;
+  background-color: #fff;
+  margin: 10rpx 30rpx;
+  flex-direction: column;
+}
+.menu-item-main {
+  display: flex;
+  padding: 40rpx;
+  border-radius: 10rpx;
   align-items: center;
+  font-size: 32rpx;
+  justify-content: space-between;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+.menu-item-arrow {
+  width: 32rpx;
+  height: 32rpx;
+  transition: 400ms;
 }
