--- a/sunhomo-miniProgram/pages/activity/activities.wxml
+++ b/sunhomo-miniProgram/pages/activity/activities.wxml
@@ -6,7 +6,7 @@
 	<view class="menu-list">
 		<block wx:for="{{activities}}" wx:for-item="activity">
 			<view class="menu-item">
-				<view class="menu-item-main" id="{{index}}" bindtap="enroll">
+				<view class="menu-item-main" id="{{index}}" data-activityid="{{activity.activityId}}" bindtap="enroll">
 					<text class="menu-item-name">{{activity.activityName}}</text>
 					<image class="menu-item-arrow " src="/images/arrowright.png">
 					</image>
