--- a/sunhomo-miniProgram/pages/activity/activity.wxss
+++ b/sunhomo-miniProgram/pages/activity/activity.wxss
@@ -15,19 +15,24 @@
   color: #000000;
   display: flex;
   background-color: #fff;
-  margin: 10rpx 30rpx;
-  flex-direction: column;
-}
-.menu-item-main {
-  display: flex;
-  padding: 40rpx;
-  border-radius: 10rpx;
-  align-items: center;
+  margin: 10rpx 0rpx;
+  /* flex-direction: column; */
+  padding: 10rpx;
   font-size: 32rpx;
-  justify-content: space-between;
 }
+.menu-item-content{
+  padding-left: 20rpx;
+  padding-right: 20rpx;
+}
+
 .menu-item-arrow {
   width: 32rpx;
   height: 32rpx;
   transition: 400ms;
+}
+
+.member_icon{
+  width: 32rpx;
+  height: 32rpx;
+  border-radius: 32rpx;
 }
