--- a/sunhomo-miniProgram/pages/activity/activity.wxml
+++ b/sunhomo-miniProgram/pages/activity/activity.wxml
@@ -15,7 +15,7 @@
 					<view wx:else>胜率:{{member.ratio/100}}%</view> 
 					积分:{{member.point}}）
 				</block>
-				<block wx:if="member.memberId==app.globalData.userInfo.memberId"><button class="mini-btn" size="mini" bindtap="quit" data-master="{{member.isMaster}}">退报</button></block>
+				<block wx:if="{{member.memberId==userInfo.memberId}}"><button class="mini-btn" size="mini" bindtap="quit" data-master="{{member.isMaster}}">退报</button></block>
 			</view>
 		</block>
 	</view>
