--- a/sunhomo-java/club_admin/src/main/resources/templates/club/activity/activity.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/club/activity/activity.html
@@ -112,6 +112,10 @@
                     title: '活动结束时间'
                 },
                 {
+                    field: 'deadline',
+                    title: '报名截止时间'
+                },
+                {
                     field: 'place',
                     title: '活动地点'
                 },
