--- a/sunhomo-java/club_admin/src/main/resources/templates/club/activity/add.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/club/activity/add.html
@@ -53,6 +53,18 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="form-group">
+                    <label class="col-sm-4 control-label">报名截止时间：</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" name="deadline">
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="form-group">
                     <label class="col-sm-4 control-label is-required">活动地点：</label>
                     <div class="col-sm-8">
                         <select name="place" class="form-control m-b">
@@ -80,6 +92,12 @@
                 </div>
             </div>
             <div class="col-sm-6">
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">活动费用：</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" name="fee">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
