--- a/sunhomo-java/club_admin/src/main/resources/templates/club/activity/activity.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/club/activity/activity.html
@@ -145,6 +145,9 @@
                         var actions = [];
                         // actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(' + row.activityId + ')"><i class="fa fa-edit"></i>编辑</a> ');
                         // actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(' + row.activityId + ')"><i class="fa fa-remove"></i>删除</a> ');
+                        if(row.activityType==2) {
+                            actions.push('<a class="btn btn-success btn-xs" href="javascript:void(0)" onclick="detail(' + row.activityId + ')"><i class="fa fa-remove"></i>分组</a> ');
+                        }
                         return actions.join('');
                     }
                 }
@@ -152,6 +155,10 @@
         };
         $.table.init(options);
     });
+
+    function detail(activityId){
+        $.modal.open("分组", "division.html");
+    }
 </script>
 </body>
 </html>
