--- a/sunhomo-java/club_admin/src/main/resources/templates/club/activity/add.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/club/activity/add.html
@@ -60,6 +60,12 @@
                 </div>
             </div>
             <div class="col-sm-6">
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">活动费用：</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" name="fee">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -93,9 +99,9 @@
             </div>
             <div class="col-sm-6">
                 <div class="form-group">
-                    <label class="col-sm-4 control-label">活动费用：</label>
+                    <label class="col-sm-4 control-label">比赛分组数：</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" name="fee">
+                        <input type="text" class="form-control" name="groups">
                     </div>
                 </div>
             </div>
@@ -105,7 +111,7 @@
                 <div class="form-group">
                     <label class="col-xs-2 control-label">活动规则：</label>
                     <div class="col-xs-10">
-                        <textarea name="activityRule" maxlength="256" class="form-control" rows="3"></textarea>
+                        <textarea name="activityRule" maxlength="256" class="form-control" rows="10"></textarea>
                     </div>
                 </div>
             </div>
@@ -115,7 +121,7 @@
                 <div class="form-group">
                     <label class="col-xs-2 control-label">备注：</label>
                     <div class="col-xs-10">
-                        <textarea name="memo" maxlength="256" class="form-control" rows="3"></textarea>
+                        <textarea name="memo" maxlength="256" class="form-control" rows="10"></textarea>
                     </div>
                 </div>
             </div>
