--- a/sunhomo-java/club_admin/src/main/resources/templates/club/activity/edit.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/club/activity/edit.html
@@ -62,6 +62,12 @@
                 </div>
             </div>
             <div class="col-sm-6">
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">活动费用：</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" name="fee" th:field="*{fee}">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -95,9 +101,9 @@
             </div>
             <div class="col-sm-6">
                 <div class="form-group">
-                    <label class="col-sm-4 control-label">活动费用：</label>
+                    <label class="col-sm-4 control-label">比赛分组数：</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" name="fee" th:field="*{fee}">
+                        <input type="text" class="form-control" name="groups" th:field="*{groups}">
                     </div>
                 </div>
             </div>
@@ -107,7 +113,7 @@
                 <div class="form-group">
                     <label class="col-xs-2 control-label">活动规则：</label>
                     <div class="col-xs-10">
-                        <textarea name="activityRule" maxlength="256" class="form-control" rows="3">[[*{activityRule}]]</textarea>
+                        <textarea name="activityRule" maxlength="256" class="form-control" rows="10">[[*{activityRule}]]</textarea>
                     </div>
                 </div>
             </div>
@@ -117,7 +123,7 @@
                 <div class="form-group">
                     <label class="col-xs-2 control-label">备注：</label>
                     <div class="col-xs-10">
-                        <textarea name="memo" maxlength="256" class="form-control" rows="3">[[*{memo}]]</textarea>
+                        <textarea name="memo" maxlength="256" class="form-control" rows="10">[[*{memo}]]</textarea>
                     </div>
                 </div>
             </div>
