--- a/sunhomo-java/club_admin/src/main/resources/templates/club/activity/activity.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/club/activity/activity.html
@@ -181,7 +181,9 @@
 
             var optionsDetail = {
                 id: "bootstrap-table-details",
-                url: ctx + "/club/division/list?activityId=" + row.activityId,
+                url: prefix + "/divisionList?activityId=" + row.activityId,
+                createUrl: prefix + "/divisionAdd?activityId=" + row.activityId,
+                removeUrl: prefix + "/divisionRemove",
                 pagination: false,
                 showSearch: false,
                 showRefresh: false,
@@ -226,6 +228,7 @@
                         formatter: function (value, row, index) {
                             var actions = [];
                             actions.push('<a class="btn btn-success btn-xs" href="javascript:void(0)" onclick="assignMember(' + row.divisionId + ')"><i class="fa fa-edit"></i>分配队员</a> ');
+                            actions.push('<a class="btn btn-danger btn-xs" href="#" onclick="$.operate.remove(' + row.divisionId + ')"><i class="fa fa-remove"></i>删除</a>');
                             return actions.join('');
                         }
                     }
