抽签功能（待完成）

--- a/sunhomo-java/club_admin/src/main/resources/templates/club/activity/activity.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/club/activity/activity.html
@@ -130,7 +130,7 @@
                 },
                 {
                     field: 'deadline',
-                    title: '报名截止时间'
+                    title: '退报截止时间'
                 },
                 {
                     field: 'place',
