--- a/sunhomo-java/club_admin/src/main/resources/templates/club/activity/add.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/club/activity/add.html
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="form-group">
-                    <label class="col-sm-4 control-label">报名截止时间：</label>
+                    <label class="col-sm-4 control-label">退报截止时间：</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control" name="deadline">
                     </div>
@@ -61,9 +61,9 @@
             </div>
             <div class="col-sm-6">
                 <div class="form-group">
-                    <label class="col-sm-4 control-label">活动费用：</label>
+                    <label class="col-sm-4 control-label">开始抽签时间：</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" name="fee">
+                        <input type="text" class="form-control" name="drawTime">
                     </div>
                 </div>
             </div>
@@ -101,9 +101,21 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">比赛分组数：</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" name="groups">
+                        <input type="text" class="form-control" name="divisions">
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">活动费用：</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" name="fee">
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
             </div>
         </div>
         <div class="row">
