--- a/sunhomo-miniProgram/pages/activity/activity.wxml
+++ b/sunhomo-miniProgram/pages/activity/activity.wxml
@@ -23,6 +23,10 @@
 	<!-- <view class="header">
 		<view class="title">{{activity.memo}}</view>
 	</view> -->
-	<button bindtap="enroll">报名</button>
-	<block wx:if="{{userInfo.isAdmin==1}}"><button bindtap="copyEnroll">复制报名贴</button></block>
+	<view style="justify-content: center;">
+		<button size="mini" bindtap="enroll">报名</button>
+		<block wx:if="{{activity.activityType==2}}"><button size="mini" bindtap="draw">抽签</button></block>
+		<block wx:if="{{userInfo.isAdmin==1}}"><button size="mini" bindtap="copyEnroll">复制报名贴</button></block>
+	</view>
+	
 </view>
