--- a/sunhomo-java/club_admin/src/main/resources/templates/club/activity/activity.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/club/activity/activity.html
@@ -184,6 +184,7 @@
                 url: prefix + "/divisionList?activityId=" + row.activityId,
                 createUrl: prefix + "/divisionAdd?activityId=" + row.activityId,
                 removeUrl: prefix + "/divisionRemove",
+                updateUrl: prefix+"/divisionEdit/{id}",
                 pagination: false,
                 showSearch: false,
                 showRefresh: false,
@@ -219,7 +220,11 @@
                         field: 'members',
                         title: '队员',
                         formatter: function (value, row, index) {
-                            ;
+                            var text = "";
+                            for(i = 0; i < value.length; i++) {
+                                text = text+value[i].memberName+"  ";
+                            }
+                            return text;
                         }
                     },
                     {
@@ -227,7 +232,7 @@
                         align: 'center',
                         formatter: function (value, row, index) {
                             var actions = [];
-                            actions.push('<a class="btn btn-success btn-xs" href="javascript:void(0)" onclick="assignMember(' + row.divisionId + ')"><i class="fa fa-edit"></i>分配队员</a> ');
+                            actions.push('<a class="btn btn-success btn-xs" href="javascript:void(0)" onclick="$.operate.edit(' + row.divisionId + ')"><i class="fa fa-edit"></i>修改</a> ');
                             actions.push('<a class="btn btn-danger btn-xs" href="#" onclick="$.operate.remove(' + row.divisionId + ')"><i class="fa fa-remove"></i>删除</a>');
                             return actions.join('');
                         }
@@ -237,10 +242,6 @@
             $.table.init(optionsDetail);
         }
     });
-
-    function assignMember(divisionId) {
-
-    }
 
 </script>
 </body>
