--- a/sunhomo-miniProgram/pages/activity/activity.wxml
+++ b/sunhomo-miniProgram/pages/activity/activity.wxml
@@ -11,9 +11,9 @@
 				.<image class="member_icon" src="{{member.memberPhoto}}"></image>{{member.memberName}}
 				<view wx:if="{{member.isMaster!=0}}">+{{member.isMaster}}</view>
 				<block wx:if="{{member.isMaster==0}}">
-					（<view wx:if="{{member.winNumber+member.loseNumber==0}}">无约战记录</view>
-					<view wx:else>胜率:{{member.ratio/100}}%</view> 
-					积分:{{member.point}}）
+					<!-- （<view wx:if="{{member.winNumber+member.loseNumber==0}}">无约战记录</view>
+					<view wx:else>胜率:{{member.ratio/100}}%</view>  -->
+					（积分:{{member.point}}）
 				</block>
 				<block wx:if="{{member.memberId==userInfo.memberId}}"><button class="mini-btn" size="mini" bindtap="quit" data-master="{{member.isMaster}}">退报</button></block>
 			</view>
