--- a/sunhomo-miniProgram/pages/activity/activity.wxml
+++ b/sunhomo-miniProgram/pages/activity/activity.wxml
@@ -25,8 +25,8 @@
 	</view> -->
 	<view style="text-align:center;margin-top:10rpx;">
 		<button size="mini" bindtap="enroll">报名</button>
-		<block wx:if="{{canDraw}}"><button size="mini" bindtap="draw">抽签</button></block>
-		<block wx:if="{{userInfo.isAdmin==1}}"><button size="mini" bindtap="copyEnroll">复制报名贴</button></block>
+		<block wx:if="{{canDraw}}"><button size="mini" style="margin-left:10rpx;" bindtap="draw">抽签</button></block>
+		<block wx:if="{{userInfo.isAdmin==1}}"><button size="mini" style="margin-left:10rpx;" bindtap="copyEnroll">复制报名贴</button></block>
 	</view>
 	<view style="margin:10rpx;font-size: 32rpx;">
 		<text>{{activity.memo}}</text>
