--- a/sunhomo-miniProgram/pages/mall/mall.wxss
+++ b/sunhomo-miniProgram/pages/mall/mall.wxss
@@ -1,1 +1,38 @@
-/* pages/mall/mall.wxss */
+.container{
+  background-color: #FBF9FE;
+  font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
+  flex: 1;
+  min-height: 100%;
+  font-size: 32rpx;
+}
+.menu-wrp {
+  width:100%;
+  margin-top:20rpx;
+}
+.menu-wrp:after{
+    content:"";
+    display:block;
+    clear:both;
+}
+.menu-list{
+    float:left;
+    width:50%;
+    box-sizing: border-box;
+    padding-bottom:10px;
+}
+
+.menu-img{
+    width:300rpx;
+    height:300rpx;
+    display:block;
+    margin:0 auto;
+    margin-bottom:5px;
+}
+.menu-desc{
+    background-color:#ffffff;
+    color:#333333;
+    width:100%;
+    text-align: center;
+    display:block;
+    font-size:12px;
+}
