--- a/sunhomo-java/club_admin/src/main/resources/templates/login.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/login.html
@@ -30,15 +30,14 @@
                     </div>
                     <div class="m-b"></div>
                     <h4>欢迎使用 <strong>狼巢 后台管理系统</strong></h4>
-                    <strong th:if="${@config.getKey('sys.account.registerUser')}">还没有账号？ <a th:href="@{/register}">立即注册&raquo;</a></strong>
                 </div>
             </div>
             <div class="col-sm-5">
                 <form id="signupForm" autocomplete="off">
                     <h4 class="no-margins">登录：</h4>
                     <input type="text"     name="username" class="form-control uname"     placeholder="用户名" value="admin"    />
-                    <input type="password" name="password" class="form-control pword"     placeholder="密码"   value="admin123" />
-					<div class="row m-t" th:if="${captchaEnabled==true}">
+                    <input type="password" name="password" class="form-control pword"     placeholder="密码"   value="langchao" />
+<!--					<div class="row m-t" th:if="${captchaEnabled==true}">
 						<div class="col-xs-6">
 						    <input type="text" name="validateCode" class="form-control code" placeholder="验证码" maxlength="5" />
 						</div>
@@ -50,7 +49,7 @@
 					</div>
                     <div class="checkbox-custom" th:classappend="${captchaEnabled==false} ? 'm-t'">
 				        <input type="checkbox" id="rememberme" name="rememberme"> <label for="rememberme">记住我</label>
-				    </div>
+				    </div>-->
                     <button class="btn btn-success btn-block" id="btnSubmit" data-loading="正在验证登录，请稍后...">登录</button>
                 </form>
             </div>
