增加积分商城功能

--- a/sunhomo-java/club_admin/src/main/resources/templates/index.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="renderer" content="webkit">
-    <title>电子场记</title>
+    <title>狼巢羽毛球 后台管理系统</title>
     <!-- 避免IE使用兼容模式 -->
  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link th:href="@{favicon.ico}" rel="stylesheet"/>
+    <link rel="shortcut icon" href="../static/favicon.jpg" th:href="@{favicon.jpg}"/>
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
     <link th:href="@{/css/jquery.contextMenu.min.css}" rel="stylesheet"/>
     <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet"/>
