--- a/sunhomo-java/club_admin/src/main/resources/templates/club/activity/add.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/club/activity/add.html
@@ -83,7 +83,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label is-required">活动场地：</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" name="field" placeholder="7:8:9">
+                        <input type="text" class="form-control" name="field" placeholder="7、8、9号">
                     </div>
                 </div>
             </div>
