--- a/sunhomo-java/club_admin/src/main/resources/templates/login.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
     <meta name="renderer" content="webkit">
     <!-- 避免IE使用兼容模式 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="../static/favicon.ico" th:href="@{favicon.ico}"/>
+    <link rel="shortcut icon" href="../static/favicon.jpg" th:href="@{favicon.jpg}"/>
     <style type="text/css">label.error { position:inherit;  }</style>
     <script>
         if(window.top!==window.self){alert('未登录或登录超时。请重新登录');window.top.location=window.location};
@@ -36,7 +36,7 @@
                 <form id="signupForm" autocomplete="off">
                     <h4 class="no-margins">登录：</h4>
                     <input type="text"     name="username" class="form-control uname"     placeholder="用户名" value="admin"    />
-                    <input type="password" name="password" class="form-control pword"     placeholder="密码"   value="langchao" />
+                    <input type="password" name="password" class="form-control pword"     placeholder="密码"   value="" />
 <!--					<div class="row m-t" th:if="${captchaEnabled==true}">
 						<div class="col-xs-6">
 						    <input type="text" name="validateCode" class="form-control code" placeholder="验证码" maxlength="5" />
