小程序端判断是否显示抽签按钮，改为后端判断

--- a/sunhomo-miniProgram/pages/activity/activity.wxml
+++ b/sunhomo-miniProgram/pages/activity/activity.wxml
@@ -24,8 +24,8 @@
 		<view class="title">{{activity.memo}}</view>
 	</view> -->
 	<view style="text-align:center;margin-top:10rpx;">
-		<button size="mini" bindtap="enroll">报名</button>
-		<block wx:if="{{canDraw}}"><button size="mini" style="margin-left:10rpx;" bindtap="draw">抽签</button></block>
+		<button type="primary" size="mini" bindtap="enroll">报名</button>
+		<block wx:if="{{activity.canDraw}}"><button type="primary" size="mini" style="margin-left:10rpx;" bindtap="draw">抽签</button></block>
 		<block wx:if="{{userInfo.isAdmin==1}}"><button size="mini" style="margin-left:10rpx;" bindtap="copyEnroll">复制报名贴</button></block>
 	</view>
 	<view style="margin:10rpx;font-size: 32rpx;">
